tdf#108954 docxexport: only emit section if diff from current

For the very last paragraph, if a header or footer was defined in
the section, then a dummy section was always being added, but that
should only happen if the section is different from the current one.
If they are the same, then the pageDesc will be created anyway, so
a dummy isn't needed to prevent it from getting lost.

Change-Id: I5e3a53e2810622c7232aa23575740bd775c5a595
Reviewed-on: https://gerrit.libreoffice.org/62430
Tested-by: Jenkins
Reviewed-by: Justin Luth <justin_luth@sil.org>
(cherry picked from commit cb7500ddb8de6c41fca84a0009ffe22240bb1845)